--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,10 +4,12 @@ pipeline {
        stages {
                   stage(“prepare”)   {
                             steps {
+                            echo 'Preparing the process... '
                                       }
                     }
                    stage(“build”)   {
                               steps {
+                              echo 'Building the code... '
                                        }
                     }
 }
